--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
     <!-- Angular's Router Library for SPA -->
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-rc.0/angular-route.js"></script>
 
-    <!-- Okta App Auth SDK -->
-    <script src="OktaAuth.min.js" type="text/javascript"></script>
+    <script src="https://ok1static.oktacdn.com/assets/js/sdk/okta-signin-widget/1.13.0/js/okta-sign-in.min.js" type="text/javascript"></script>
 
     <!-- Main Files -->
-    <script src="app.js" type="text/javascript"> </script>
-    <script src="okta-angular.js" type="text/javascript"></script>
-    <script src="api_calls.js" type="text/javascript"></script>
-    <script src="oktaconfig.js" type="text/javascript"></script>
+    <script src="./app.js" type="text/javascript"></script>
+    <script src="./acmehealth-controllers/login.js" type="text/javascript"></script>
+    <script src="./acmehealth-controllers/requests.js" type="text/javascript"></script>
+    <script src="./acmehealth-controllers/schedule.js" type="text/javascript"></script>
+
+    <!-- <script src="./okta-angular.js" type="text/javascript"></script> -->
+    <script src="./api-handler.js" type="text/javascript"></script>
+    <script src="./okta-config.js" type="text/javascript"></script>
+     <script src="./widget-manager.js" type="text/javascript"></script> 
 
     <title>AcmeHealth</title>
     <meta charset="utf-8">
